@@ -5,7 +5,7 @@ rm -rf build install py3
 mkdir py3
 cp -apr etc scripts parti wimpiggy xpra add_build_info.py setup.py make_constants_pxi.py parti.1 xpra.1 xpra_launcher.1 xpra.png *.desktop README* COPYING ./py3
 pushd py3
-patch -p1 < ../disable-posix-server.patch
+patch -p1 < ../patches/disable-posix-server.patch
 python3-2to3 --no-diffs -x all -f except -w -n .
 CFLAGS=-O2 python3 setup.py install
 popd
