@@ -1,6 +1,8 @@
 v0.6.0 (2012-08-21)
 ======================
-	-- TODO
+	-- fix for missing tray icon on some *nix desktop themes
+	-- better build environment detection
+	-- tidy up main source directory
 
 
 v0.5.0 (2012-08-20)
